--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -1,7 +1,7 @@
 .popup {
   display: none;
   position: fixed;
-  width: 460px;
+  width: 90%;
   left: 50%;
   top: 3%;
   transform: translate(-50%, -50%);
@@ -34,22 +34,22 @@
 }
 
 .popup__table {
-  max-width: 358px;
+  max-width: 600px;
   margin: 0 auto;
   margin-bottom: 30px;
 }
 
 .popup__table-tag {
-  max-width: 358px;
+  max-width: 600px;
   margin: 0 auto;
   border-collapse: collapse;
 }
 
 .popup__cell {
 	border: 1px solid #000;
-	width: auto;
+	width: 100px;
   min-width: 40px;
-  max-width: 268px;
+  max-width: 300px;
   overflow: hidden;
 	padding: 3px 10px;
   text-overflow: ellipsis;
