--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -94,3 +94,8 @@
 .popup__btn--game {
   background-color: #32CD52;
 }
+
+.popup__btn--sendScore {
+  padding: 10px 30px;
+  background-color: #429ed4;
+}
